--- a/index.html
+++ b/index.html
@@ -1,12 +1,294 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Plantilla Valencia</title>
+    <link rel="stylesheet" href="plantilla.css">
 </head>
+
 <body>
-    
+    <main>
+        <table border="1" align="center">
+            <colgroup>
+                <col style="width: 200px;">
+                <col style="width: 150px;">
+                <col style="width: 150px;">
+            </colgroup>
+
+            <tbody>
+                <tr>
+                    <td rowspan="3">Pa&iacute;ses Europeos</td>
+                    <td>Espa&ntilde;a</td>
+                    <td>Madrid</td>
+                </tr>
+                <tr>
+                    <td>Francia</td>
+                    <td>Paris</td>
+                </tr>
+                <tr>
+                    <td>Reino Unido</td>
+                    <td>Londres</td>
+                </tr>
+                <tr>
+                    <td rowspan="3">Pa&iacute;ses Americanos</td>
+                    <td>EEUU</td>
+                    <td>Washington</td>
+                </tr>
+                <tr>
+                    <td>Canada</td>
+                    <td>Toronto</td>
+                </tr>
+                <tr>
+                    <td>Mexico</td>
+                    <td>Mexico</td>
+                </tr>
+            </tbody>
+        </table>
+        <br>
+        <hr>
+        <h1 style="text-align: center;">Plantilla de Valencia</h1>
+
+
+        <table class="centrar" align="center">
+            <caption>
+                <h2>Porteros</h2>
+            </caption>
+            <colgroup>
+                <col style="width: 300px;">
+                <col style="width: 300px;">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <td>
+                        <img src="imgenes/portero.PNG" alt="">
+                    </td>
+                    <td>
+                        <img src="imgenes/portero2.PNG" alt="">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h3>Jaume Dom&eacute;nech</h3>
+                        <p>PORTERO</p>
+                    </td>
+                    <td>
+                        <h3>Jasper Cillessen</h3>
+                        <p>PORTERO</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <hr>
+        <table class="centrar" align="center">
+            <caption>
+                <h2>Defensas</h2>
+            </caption>
+            <colgroup>
+                <col style="width: 300px;">
+                <col style="width: 300px;">
+                <col style="width: 300px;">
+                <col style="width: 300px;">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <td>
+                        <img src="imgenes/defensa.PNG" alt="">
+                    </td>
+                    <td>
+                        <img src="imgenes/defensa2.PNG" alt="">
+                    </td>
+                    <td>
+                        <img src="imgenes/defensa3.PNG" alt="">
+                    </td>
+                    <td>
+                        <img src="imgenes/defensa4.PNG" alt="">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h3>Jaume Costa</h3>
+                        <p>DEFENSA</p>
+                    </td>
+                    <td>
+                        <h3>Eliaquim Mangala</h3>
+                        <p>DEFENSA</p>
+                    </td>
+                    <td>
+                        <h3>Gabriel Paulista</h3>
+                        <p>DEFENSA</p>
+                    </td>
+                    <td>
+                        <h3>Mouctar Diakhaby</h3>
+                        <p>DEFENSA</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table class="centrar" align="center">
+            <colgroup>
+                <col style="width: 300px;">
+                <col style="width: 300px;">
+                <col style="width: 300px;">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <td>
+                        <img src="imgenes/defensa5g.PNG" alt="">
+                    </td>
+                    <td>
+                        <img src="imgenes/defensa6g.PNG" alt="">
+                    </td>
+                    <td>
+                        <img src="imgenes/defensa7g.PNG" alt="">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h3>Jos&eacute; Gay&aacute;</h3>
+                        <p>DEFENSA</p>
+                    </td>
+                    <td>
+                        <h3>Cristiano Piccini</h3>
+                        <p>DEFENSA</p>
+                    </td>
+                    <td>
+                        <h3>Ezequiel Garay</h3>
+                        <p>DEFENSA</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <hr>
+        <table class="centrar" align="center">
+            <caption>
+                <h2>Centrocampistas</h2>
+            </caption>
+            <colgroup>
+                <col style="width: 300px;">
+                <col style="width: 300px;">
+                <col style="width: 300px;">
+                <col style="width: 300px;">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <td>
+                        <img src="imgenes/centro.PNG" alt="">
+                    </td>
+                    <td>
+                        <img src="imgenes/centro2.PNG" alt="">
+                    </td>
+                    <td>
+                        <img src="imgenes/centro3.PNG" alt="">
+                    </td>
+                    <td>
+                        <img src="imgenes/centro4.PNG" alt="">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h3>Gonçalo Guedes</h3>
+                        <p>CENTROCAMPISTA</p>
+                    </td>
+                    <td>
+                        <h3>Carlos Soler</h3>
+                        <p>CENTROCAMPISTA</p>
+                    </td>
+                    <td>
+                        <h3>Daniel Parejo</h3>
+                        <p>CENTROCAMPISTA</p>
+                    </td>
+                    <td>
+                        <h3>Denis Cheryshew</h3>
+                        <p>CENTROCAMPISTA</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="imgenes/centro5.PNG" alt="">
+                    </td>
+                    <td>
+                        <img src="imgenes/centro6.PNG" alt="">
+                    </td>
+                    <td>
+                        <img src="imgenes/centro7.PNG" alt="">
+                    </td>
+                    <td>
+                        <img src="imgenes/centro8.PNG" alt="">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h3>Lee Kang-In</h3>
+                        <p>CENTROCAMPISTA</p>
+                    </td>
+                    <td>
+                        <h3>Francis Coquelin</h3>
+                        <p>CENTROCAMPISTA</p>
+                    </td>
+                    <td>
+                        <h3>Daniel Wass</h3>
+                        <p>CENTROCAMPISTA</p>
+                    </td>
+                    <td>
+                        <h3>Ferr&aacute;n Torres</h3>
+                        <p>CENTROCAMPISTA</p>
+                    </td>
+                </tr>
+            </tbody>
+
+        </table>
+        <hr>
+        <table class="centrar" align="center">
+            <caption>
+                <h2>Delanteros</h2>
+            </caption>
+            <colgroup>
+                <col style="width: 300px;">
+                <col style="width: 300px;">
+                <col style="width: 300px;">
+                <col style="width: 300px;">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <td>
+                        <img src="imgenes/delantero.PNG" alt="">
+                    </td>
+                    <td>
+                        <img src="imgenes/delantero2.PNG" alt="">
+                    </td>
+                    <td>
+                        <img src="imgenes/delantero3.PNG" alt="">
+                    </td>
+                    <td>
+                        <img src="imgenes/delantero4.PNG" alt="">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h3>Kevin Gameiro</h3>
+                        <p>DELANTEROS</p>
+                    </td>
+                    <td>
+                        <h3>Manu Vallejo</h3>
+                        <p>DELANTEROS</p>
+                    </td>
+                    <td>
+                        <h3>Rodrigo Moreno</h3>
+                        <p>DELANTEROS</p>
+                    </td>
+                    <td>
+                        <h3>Maxi G&oacute;mez</h3>
+                        <p>DELANTEROS</p>
+                    </td>
+                </tr>
+        </table>
+
+        <br>
+    </main>
 </body>
+
 </html>
